➕ 🔨 comptage mots 🎉 Projet fini

--- a/code.html
+++ b/code.html
@@ -18,22 +18,30 @@
 &lt;html lang="fr"&gt;
 &lt;head&gt;
     &lt;meta charset="UTF-8"&gt;
-    &lt;title&gt;Comptage des phrases modifiées&lt;/title&gt;
+    &lt;title&gt;Suivi statistique des corrections&lt;/title&gt;
     &lt;link rel="stylesheet" href="comptage.css"&gt;
 &lt;/head&gt;
 &lt;body&gt;
 
     &lt;main class="container"&gt;
 
-        &lt;h1&gt;Comptage des phrases modifiées&lt;/h1&gt;
+        &lt;h1&gt;Suivi statistique des corrections&lt;/h1&gt;
 
-        &lt;p class="description"&gt;
-                Cet outil compare deux versions d’un texte pour déterminer
-                quelles phrases du texte original ont été modifiées. Une phrase
-                est considérée comme conservée si elle existe encore telle
-                quelle dans le texte corrigé, dans le même ordre, même si des
-                phrases ont été ajoutées entre les deux versions.
+        &lt;p&gt;
+            Cet outil compare deux versions d&rsquo;un m&ecirc;me texte selon deux
+            crit&egrave;res compl&eacute;mentaires.
+            &lt;br /&gt;&lt;br /&gt;
+            Le &lt;strong&gt;taux de phrases retouch&eacute;es&lt;/strong&gt; mesure la part de
+            phrases du texte original qui ont &eacute;t&eacute; modifi&eacute;es, d&eacute;plac&eacute;es ou
+            supprim&eacute;es dans la version retravaill&eacute;e. Les phrases ajout&eacute;es ne
+            sont pas prises en compte.
+            &lt;br /&gt;&lt;br /&gt;
+            Le &lt;strong&gt;taux de mots conserv&eacute;s&lt;/strong&gt; mesure la proportion
+            de mots du texte original qui se retrouvent encore dans la
+            version corrig&eacute;e. Les ajouts ne sont pas compt&eacute;s.
+            &lt;br /&gt;&lt;br /&gt;
         &lt;/p&gt;
+
 
         &lt;p class="code-link"&gt;
             Le code est accessible ici :
